<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:src="@drawable/img1"
        android:scaleType="fitStart"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="100dp"
        android:adjustViewBounds="true"
        />

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:id="@+id/auditorumPin"
        android:layout_gravity="center|center_vertical"
        android:adjustViewBounds="false"
        android:layout_marginBottom="50dp"
        android:visibility="invisible" />

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:id="@+id/commonRoomPin"
        android:layout_gravity="left|center_vertical"
        android:adjustViewBounds="false"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:visibility="invisible" />

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:id="@+id/B01Pin"
        android:layout_gravity="left|top"
        android:adjustViewBounds="false"
        android:visibility="invisible"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp" />

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:id="@+id/B02Pin"
        android:layout_gravity="center|top"
        android:adjustViewBounds="false"
        android:layout_marginLeft="50dp"
        android:layout_margin="50dp"
        android:visibility="invisible"/>

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:id="@+id/B03Pin"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="60sp"
        android:visibility="invisible"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"/>


    <ImageView
        android:src="@drawable/pin"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:id="@+id/restroomPin"
        android:layout_gravity="right|top"
        android:adjustViewBounds="false"
        android:visibility="invisible"
        android:layout_marginTop="60dp"
        android:layout_marginRight="70dp" />

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:id="@+id/B07Pin"
        android:layout_gravity="right|center_vertical"

        android:layout_marginRight="100dp"
        android:visibility="invisible"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"/>

    <ImageView
        android:src="@drawable/pin"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:id="@+id/B06Pin"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="100dp"
        android:visibility="invisible"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/B01_tv"
        android:id="@+id/B01_textView"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_margin="50dp"/>

    <TextView
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/B02_tv"
        android:id="@+id/B02_textView"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_margin="50dp"/>
    <TextView
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/B03_tv"
        android:id="@+id/B03_textView"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_margin="50dp"/>
    <TextView
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Restroom_tv"
        android:id="@+id/Restroom_textView"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_margin="50dp"/>

    <TextView
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CommonRoom_tv"
        android:id="@+id/CommonRoom_textView"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_margin="50dp" />


</FrameLayout>